samples/network-policies/block-web-traffic.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "block-traffic-outside-cluster"
  namespace: web
spec:
  description: "L7 policy to block all GET methods"
  endpointSelector:
    matchLabels:
      app: productcatalogservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: froontend
      toPorts:
        - ports:
            - port: "3550"
              protocol: TCP
          rules:
            http:
             - method: "GET"
               path: "/"
